refactor: DTO 관련 구조 개선 (DTO 적용 및 클래스명, 바인딩 구조 정리 등)