@@ -1,8 +1,9 @@
 package com.readingtracker.boochive.controller;
 
 import com.readingtracker.boochive.domain.*;
-import com.readingtracker.boochive.dto.BookDto;
-import com.readingtracker.boochive.dto.PageableBookListDto;
+import com.readingtracker.boochive.dto.BookParameter;
+import com.readingtracker.boochive.dto.PageableBookListResponse;
+import com.readingtracker.boochive.dto.ReadingBookDetailResponse;
 import com.readingtracker.boochive.service.*;
 import com.readingtracker.boochive.util.AladdinOpenAPIHandler;
 import com.readingtracker.boochive.util.ApiResponse;
@@ -35,7 +36,7 @@ public class BookController {
                                                                         @RequestParam(defaultValue = "1") Integer page,
                                                                         @AuthenticationPrincipal User user) {
         // 책 검색 결과
-        PageableBookListDto searchResult = aladdinOpenAPIHandler.searchBooks(page, query, QueryType.TITLE);
+        PageableBookListResponse searchResult = aladdinOpenAPIHandler.searchBooks(page, query, QueryType.TITLE);
 
         // 책 통계 정보 세팅
         List<String> bookIsbnList = searchResult.getItem().stream()
@@ -43,13 +44,13 @@ public class BookController {
                     setBookStatistics(book);
                     return book.getIsbn13();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // 사용자의 독서 상태 및 컬렉션 정보
-        Map<String, ReadingBook> readingInfoList = readingBookService
+        Map<String, ReadingBookDetailResponse> readingInfoList = readingBookService
                 .getReadingListByUserAndBookList(user.getId(), bookIsbnList)
                 .stream()
-                .collect(Collectors.toMap(ReadingBook::getBookIsbn, readingBook -> readingBook));
+                .collect(Collectors.toMap(ReadingBookDetailResponse::getBookIsbn, readingBook -> readingBook));
 
         Map<String, Object> data = new HashMap<>();
         data.put("searchResult", searchResult);
@@ -65,14 +66,15 @@ public class BookController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> getBookDetails(@PathVariable String isbn,
                                                                            @AuthenticationPrincipal User user) {
         // 책 조회 결과
-        PageableBookListDto lookupResult = aladdinOpenAPIHandler.lookupBook(isbn);
-        BookDto book = lookupResult.getItem().get(0);
+        PageableBookListResponse lookupResult = aladdinOpenAPIHandler.lookupBook(isbn);
+        BookParameter book = lookupResult.getItem().get(0);
 
         // 책 통계 정보 세팅
         setBookStatistics(book);
 
         // 사용자의 독서 상태 및 컬렉션 정보
-        Optional<ReadingBook> readingInfo = readingBookService.findReadingBookByUserAndBook(user.getId(), isbn);
+        Optional<ReadingBookDetailResponse> readingInfo = readingBookService
+                .findReadingBookByUserAndBook(user.getId(), isbn);
 
         Map<String, Object> data = new HashMap<>();
         data.put("lookupResult", lookupResult);
@@ -84,10 +86,13 @@ public class BookController {
     /**
      * (공통 메서드) 책 통계 정보 세팅 - 리뷰 개수, 평균 평점, 독자 수
      */
-    private void setBookStatistics(BookDto book) {
+    private void setBookStatistics(BookParameter book) {
+        BookParameter.SubInfo subInfo = book.getSubInfo();
+
         Map<String, Object> reviewInfo = reviewService.getBookReviewInfo(book.getIsbn13());
-        book.setReviewCount((Integer) reviewInfo.get("reviewCount"));
-        book.setAverageRating((BigDecimal) reviewInfo.get("averageRating"));
-        book.setReaderCount(readingBookService.getBookReaderCount(book.getIsbn13()));
+
+        subInfo.setReviewCount((Integer) reviewInfo.get("reviewCount"));
+        subInfo.setAverageRating((BigDecimal) reviewInfo.get("averageRating"));
+        subInfo.setReaderCount(readingBookService.getBookReaderCount(book.getIsbn13()));
     }
 }
